--- a/Exc022/Fundo006.html
+++ b/Exc022/Fundo006.html
@@ -9,13 +9,14 @@
         body{
             background-color: black;
             background-image: url(Imagens/wallpaper002.jpg);
-            background-position: center top;
-            background-repeat: no-repeat;
+            background-position: center center;
+            background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;
         }
         main{
             background-color: white ;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border-radius: 15px;
@@ -27,6 +28,24 @@
     <main>
         <h1>Teste de imagem de Fundo</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, deleniti dolor pariatur debitis placeat soluta. Iure ab repudiandae libero quo amet. Voluptatem qui ducimus dolorem, delectus sit at nobis ipsum!Lorem
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sit similique dicta aut totam necessitatibus placeat nemo magnam, veritatis voluptate, culpa ipsa est omnis reiciendis consequatur odit eligendi. Omnis, quas.
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni illo voluptatum officiis nemo nostrum molestiae animi nulla iure voluptas, sint, ratione odit iusto dignissimos ab sapiente ea saepe autem quo.
         </p>
