--- a/Desafiocordel/Desafio.html
+++ b/Desafiocordel/Desafio.html
@@ -13,5 +13,15 @@
         <p>Por <strong>Milton Duarte</strong></p>
     </header>
 
+    <section>
+        <p>Estou ficando cansado
+            Da tal tecnologia
+            Só se fala por e-mail
+            Mensagem curta e fria
+            Twitter e Facebook
+            Antes que eu caduque
+            Vou dizer tudo em poesia.
+            </p>
+    </section>
 </body>
 </html>
