--- a/Desafiocordel/Desafio.html
+++ b/Desafiocordel/Desafio.html
@@ -14,14 +14,24 @@
     </header>
 
     <section>
-        <p>Estou ficando cansado
-            Da tal tecnologia
-            Só se fala por e-mail
-            Mensagem curta e fria
-            Twitter e Facebook
-            Antes que eu caduque
+        <p class="cursivopreto">Estou ficando cansado <br>
+            Da tal tecnologia <br>
+            Só se fala por e-mail <br>
+            Mensagem curta e fria <br>
+            Twitter e Facebook <br>
+            Antes que eu caduque <br>
             Vou dizer tudo em poesia.
-            </p>
+        </p>
+
+        <p class="cursivobranco">    
+            Não é mais como era antes <br>
+            É tudo abreviado <br>
+            "Você" só tem duas letras <br>
+            O "O" e o "E" foi riscado <br>
+            Para declarar o amor <br>
+            Basta botar uma flor <br>
+            E um coração desenhado.
+        </p>
     </section>
 </body>
 </html>
