--- a/Exc023/Tabela002.html
+++ b/Exc023/Tabela002.html
@@ -37,14 +37,14 @@
         <caption>População Das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
 
             <tr>
-                <td>São Paulo</td>
+                <td >São Paulo</td>
                 <td class="num">46 649 132</td>
             </tr>
             <tr>
@@ -154,7 +154,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td>Total habitantes</td>
+                <th scope="row">Total habitantes</td>
                 <td class="num"><strong>209.750.405</strong></td>
             </tr>
         </tfoot>
