--- a/Exc023/Tabela002.html
+++ b/Exc023/Tabela002.html
@@ -45,6 +45,9 @@
     </style>
 </head>
 <body>
+    <h1>
+        Uso de tabelas grandes
+    </h1>
     <table>
         <caption>População Das Unidades Federativas</caption>
         <thead>
