--- a/Exc024/iframe003.html
+++ b/Exc024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam veritatis odit cupiditate sequi nesciunt hic quasi, quis debitis modi ipsam odio praesentium a quia, ipsa autem mollitia nostrum? Aspernatur, minima!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ratione consequatur quas dignissimos ea odit, debitis non quos facere ab sit hic facilis pariatur minus neque exercitationem veniam qui quasi.</p>
 
-    <iframe name="frame" src="">
+    <iframe name="frame" srcdoc="<h1>Escolha uma das opções a cima</h1>">
         <p>Infelizmente o seu navegador não é compativel com isso</p>
     </iframe>
     
