--- a/Exc025/Form002.html
+++ b/Exc025/Form002.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Teste de Formulario</h1>
-    <form action="" method="post">
+    <form action="cadastro.php" method="post">
         <p>
             <label for="iusu">Usuario: </label>
             <input type="text" name="usu" id="iusu" required minlength="5" maxlength="15" size="15" placeholder="Digite o nome">
