--- a/Exc026/mq001/index.html
+++ b/Exc026/mq001/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
-    
+    <header>
+        <h1>Notícias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Politicas</li>
+                <li>Tecnologias</li>
+            </ul>
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h1> Estou aprendendo Media Queries</h1>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, quia ea, consequatur praesentium eligendi similique corrupti velit molestias quisquam laudantium dolor optio? Sint quam ut, placeat sunt quae hic harum.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus tempore esse nemo harum, enim perspiciatis cupiditate quas vero necessitatibus alias reprehenderit eligendi, modi animi ipsam sint a voluptatum iste ut.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat laborum deleniti numquam aperiam vel, praesentium provident modi possimus ipsam unde consequatur? Optio nemo iusto tempore vero dignissimos dolores dicta accusantium!</p>
+        </article>
+    </main>
 </body>
 </html>
